Revert "hopefully fix scroll on safari"
This reverts commit e8cb677649d9272174285a9019bc0a79613c472f.

# Conflicts:
#	public/css/poole.css

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -170,8 +170,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
+  overflow: auto;
 }
 pre code {
   padding: 0;
